--- a/rompr/Dockerfile
+++ b/rompr/Dockerfile
@@ -5,6 +5,6 @@ RUN curl -L -o rompr.zip http://sourceforge.net/projects/rompr/files/latest/down
 RUN apt-get update
 RUN apt-get install -y unzip
 RUN unzip rompr.zip
-#RUN mv rompr/* .
 RUN rm -rf rompr.zip
 RUN chown -R www-data .
+RUN docker-php-ext-install mbstring
