[ENH] rompr : volume permissions => add www-data to users group

--- a/rompr/Dockerfile
+++ b/rompr/Dockerfile
@@ -9,4 +9,6 @@ RUN rm -rf rompr.zip
 RUN chown -R www-data .
 RUN docker-php-ext-install mbstring
 
+# ensure www-data has access to file from volume if file are mapped as uid/gid 1000/1000
+RUN useradd -G users www-data
 VOLUME /mnt/samba/son
