--- a/domotiga/Dockerfile
+++ b/domotiga/Dockerfile
@@ -30,13 +30,8 @@ RUN sed -i -e"s/^bind-address\s*=\s*127.0.0.1/bind-address = 0.0.0.0/" /etc/mysq
 # Use baseimage-docker's init system.
 CMD ["/sbin/my_init"]
 
-#VOLUME ["/data"]
-# mpd
+# mysql for outside
 EXPOSE 3306
-
-# Clean up APT when done.
-RUN apt-get purge git-core
-RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 ## disable SSH
 RUN rm -rf /etc/service/sshd /etc/my_init.d/00_regen_ssh_host_keys.sh
@@ -46,3 +41,26 @@ ADD start-domotiga.sh /etc/service/domotiga/run
 ADD start-database.sh /etc/service/mysqld/run
 
 EXPOSE  9009 19009/udp 9090
+
+# web
+RUN git clone https://github.com/DomotiGa/DomotiYii.git /domotiyii
+RUN apt-get install nginx php5 php5-fpm php5-mysql
+#RUN echo "cgi.fix_pathinfo = 0" >> /etc/php5/fpm/php.ini
+RUN echo "daemon off;" >> /etc/nginx/nginx.conf
+ADD nginx/default  /etc/nginx/sites-enabled/default
+RUN sed -i -e "s/;daemonize\s*=\s*yes/daemonize = no/g" /etc/php5/fpm/php-fpm.conf
+RUN sed -i "s/;cgi.fix_pathinfo=1/cgi.fix_pathinfo=0/" /etc/php5/fpm/php.ini
+ADD start-nginx.sh /etc/service/nginx/run
+ADD start-php.sh /etc/service/php/run
+RUN chown -R www-data:www-data /domotiyii/domotiyii/protected/runtime
+RUN chown -R www-data:www-data /domotiyii/domotiyii/assets
+
+EXPOSE 80
+
+RUN apt-get install rrdtool
+
+# Clean up APT when done.
+RUN apt-get purge git-core
+RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+
+
