--- a/domotiga/Dockerfile
+++ b/domotiga/Dockerfile
@@ -63,4 +63,5 @@ RUN apt-get install rrdtool
 RUN apt-get purge git-core
 RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
-
+# allow mapping host usb devices
+VOLUME ["/dev/bus/usb"]
