--- a/domotiga/Dockerfile
+++ b/domotiga/Dockerfile
@@ -65,3 +65,4 @@ RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 # allow mapping host usb devices
 VOLUME ["/dev/bus/usb"]
+VOLUME ["/dev/serial"]
