--- a/rainloop/Dockerfile
+++ b/rainloop/Dockerfile
@@ -1,5 +1,8 @@
 FROM php:5.6-apache
 
+LABEL version="1.8.3"
+
+
 WORKDIR /var/www/html/
 RUN curl -L -o rainloop.zip http://repository.rainloop.net/v2/webmail/rainloop-latest.zip
 RUN apt-get update
