[NEW] shaarli docker recipe

--- a/apache-php-proxy-pass-bug/apache2.conf
+++ b/apache-php-proxy-pass-bug/apache2.conf
@@ -10,7 +10,7 @@ User www-data
 Group www-data
 HostnameLookups Off
 ErrorLog /proc/self/fd/2
-LogLevel warn
+LogLevel trace6
 
 IncludeOptional mods-enabled/*.load
 IncludeOptional mods-enabled/*.conf
@@ -41,12 +41,6 @@ AccessFileName .htaccess
 	Require all denied
 </FilesMatch>
 
-ProxyPassInherit off
-ProxyPass /test balancer://static
-
-<Proxy balancer://static/>
-  BalancerMember http://localhost:80
-</Proxy>
 
 <VirtualHost *:80>
   DocumentRoot /var/www/static
@@ -61,14 +55,19 @@ ProxyPass /test balancer://static
 Listen 81
 <VirtualHost *:81>
   ProxyPassInherit Off
-  ProxyPass /test !
   DocumentRoot /var/www/dynamic
 </VirtualHost>
 
-Listen 82
-<VirtualHost *:82>
-</VirtualHost>
 
+<Proxy balancer://static>
+  BalancerMember http://localhost:80
+  ProxySet lbmethod=byrequests
+</Proxy>
+
+ProxyPassInherit off
+<Location /test>
+ProxyPass balancer://static
+</Location>
 
 LogFormat "%v:%p %h %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\"" vhost_combined
 LogFormat "%h %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\"" combined
